# flood

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: main.yml
src/: flood.rs  into_stream.rs  lib.rs  size_hint.rs
src/adaptors/: interleave.rs  mod.rs
