[package]
name = "flood"
version = "0.1.0"
authors = ["Mathspy <mathspy257@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = { version = "0.3" }
futures-util = { version = "0.3" }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
