[package]
name = "flood"
version = "0.1.0"
authors = ["Mathspy <mathspy257@gmail.com>"]
edition = "2018"

description = "The missing pieces of async Streams"
documentation = "https://docs.rs/flood"
homepage = "https://docs.rs/flood"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mathspy/flood/"

[dependencies]
futures-core = { version = "0.3" }
futures-util = { version = "0.3" }
pin-project = { version = "0.4" }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
